--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
                 Currently, I am a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/person/mkim">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p style="text-align:center">
-                <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/jonbarron/">Github</a>
+                <a href="mailto:hello.min1996@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/minseok-kim-010756146/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://github.com/BupyeongHealer">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
