--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/circle-profile-photo.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
