--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-               My research interests lie in the fields of 3D computer vision. In particular, I focus on realistic movements using humans and animals. Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation using animals. To deal with this problem, I'm currently a master's student intern at the PS and OSLab of MPI.
+               My research interests lie in the fields of 3D computer vision. In particular, I focus on realistic movements using humans and animals. Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation using animals.
               </p>
             </td>
           </tr>
