--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="10%" valign="middle">
-          <a href="https://ps.is.mpg.de/"><img src="images/mpi_logo.png" width="120"></a>
+          <a href="https://ps.is.mpg.de/"><img src="images/max_planck_is_logo.png" width="120"></a>
         </td>
         <td width="10%" valign="middle">
-          <a href="https://aigs.unist.ac.kr/eng/index.php"><img src="images/unist_logo.png" width="80"></a>
+          <a href="https://aigs.unist.ac.kr/eng/index.php"><img src="images/unist_logo.png" width="120"></a>
         </td>
 
         <td width="10%" valign="middle">
-          <a href="https://www.purdue.edu/"><img src="images/purdue_logo.png" width="60"></a>
+          <a href="https://www.purdue.edu/"><img src="images/purdue_logo.png" width="120"></a>
         </td>
         <td width="10%" valign="middle">
-          <a href="https://neweng.cau.ac.kr/index.do"><img src="images/chung-ang_university_logo.jpg" width="90"></a>
+          <a href="https://neweng.cau.ac.kr/index.do"><img src="images/chung-ang_university_logo.png" width="120"></a>
         </td>
         
       </tr>
