--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="10%" valign="middle">
-          <a href="https://ps.is.mpg.de/"><img src="images/max_planck_is_logo.png" width="120"></a>
+          <a href="https://ps.is.mpg.de/"><img src="images/max_planck_is_logo.png" width="140"></a>
         </td>
         <td width="10%" valign="middle">
-          <a href="https://aigs.unist.ac.kr/eng/index.php"><img src="images/unist_logo.png" width="120"></a>
+          <a href="https://aigs.unist.ac.kr/eng/index.php"><img src="images/unist_logo.png" width="90"></a>
         </td>
 
         <td width="10%" valign="middle">
-          <a href="https://www.purdue.edu/"><img src="images/purdue_logo.png" width="120"></a>
+          <a href="https://www.purdue.edu/"><img src="images/purdue_logo.png" width="140"></a>
         </td>
         <td width="10%" valign="middle">
-          <a href="https://neweng.cau.ac.kr/index.do"><img src="images/chung-ang_university_logo.png" width="120"></a>
+          <a href="https://neweng.cau.ac.kr/index.do"><img src="images/chung-ang_university_logo.png" width="90"></a>
         </td>
         
       </tr>
@@ -67,7 +67,8 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-               My research interests lie in the fields of 3D computer vision. In particular, I focus on realistic movements using humans and animals. Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation using animals.
+               My research interests lie in the fields of 3D computer vision. In particular, I focus on realistic movements using humans and animals. 
+	       Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation using animals.
               </p>
             </td>
           </tr>
