--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <td width="10%" valign="middle">
           <a href="https://aigs.unist.ac.kr/eng/index.php"><img src="images/unist_logo.png" width="70"></a>
         </td>
-
+        <td width="10%" valign="middle">
+          <a href="https://research.dgist.ac.kr/automotive/"><img src="images/dgist_logo.png" width="70"></a>
+        </td>
         <td width="10%" valign="middle">
           <a href="https://www.purdue.edu/"><img src="images/purdue_logo.png" width="170"></a>
         </td>
