--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://yifanjiang.net/MalleConv.html">
-                <papertitle> A paper on "3D Human mesh generation given scene" </papertitle>
+                <papertitle> A paper on "3D Human mesh generation in scene" </papertitle>
               </a>
               <br>
               <em>submitted</em>, 2022
