--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='malle_image'>
-                  <img src='images/submitted-logo.jpg' width="160"></div>
-                <img src='images/submitted-logo.jpg' width="160">
+                  <img src='images/submitted-logo.jpg' width="80"></div>
+                <img src='images/submitted-logo.jpg' width="80">
+		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
                 function malle_start() {
