--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 	      
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:50px;width:25%;vertical-align:middle">
+		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-                  <img src='images/submitted-logo.jpg' width="100"></div>
-                <img src='images/submitted-logo.jpg' width="100">
+                  <img src='images/submitted-logo.jpg' width="130"></div>
+                <img src='images/submitted-logo.jpg' width="130">
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
