--- a/index.html
+++ b/index.html
@@ -197,15 +197,12 @@
         <td width="75%" valign="top">
         <p>
           <a href="https://github.com/PaolaArdon/Salt-Pepper">
-          <papertitle>3D Scene Graph Generation using 360 panoramac image</papertitle>
+          <papertitle>3D Scene Graph Generation using Panoramic Images</papertitle>
           </a>
           <br>
-          <strong>Songyou Peng</strong>, <a href="https://zhangleuestc.github.io">Le Zhang</a>, <a href="https://team.inria.fr/perception/team-members/yutong-ban/">Yutong Ban</a>, <a href="http://people.eng.unimelb.edu.au/mengf1/">Meng Fang</a>, <a href="stefan.winkler.site">Stefan Winkler</a>
+          <strong>Minseok Kim</strong>
           <br>
-    	  <em>IJCNN One-Minute Gradual (OMG) Emotion Behavior Challenge</em>, 2018<br>
-          <a href="https://www2.informatik.uni-hamburg.de/wtm/omgchallenges/omg_emotion2018_results2018.html">leaderboard</a> |
-      	  <a href="https://arxiv.org/abs/1805.00638">arxiv</a> |
-          <a href="https://github.com/pengsongyou/OMG-ADSC">code</a>
+    	  <em>3D Vision Course Project</em>, 2021<br>
           <p></p>
           <p></p>
 
