--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <td width="75%" valign="top">
         <p>
           <a href="https://github.com/PaolaArdon/Salt-Pepper">
-          <papertitle>3D Scene Graph Generation using Panoramic Images</papertitle>
+          <papertitle>3D Scene Graph Generation using <nobr>360°</nobr> Panoramic Images</papertitle>
           </a>
           <br>
           <strong>Minseok Kim</strong>
