--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
     	  <em>3D Vision Course Project</em>, 2021<br>
           <p></p>
           <p></p>
-
-           <strong>1st</strong> for vision-only arousal/valence prediction and <strong>2nd</strong> for overall valence prediction. </a>
+           Propose 3D scene graph relationship using cosine similarity between two objects.
+	   <br>
+           Apply Mask-RCNN on the panoramic image for identifying objects.
         </p>
         </p>
         </td>
