--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
         <td width="75%" valign="top">
         <p>
-          <papertitle>3D Scene Graph Generation using <nobr>360°</nobr> Panoramic Images</papertitle>
+          3D Scene Graph Generation using <nobr>360°</nobr> Panoramic Images
           <br>
           <strong>Minseok Kim</strong>
           <br>
