--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
         <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
         <td width="75%" valign="top">
         <p>
-          3D Scene Graph Generation using <nobr>360°</nobr> Panoramic Images
+          <papertitle>3D Scene Graph Generation using <nobr>360°</nobr> Panoramic Images</papertitle>
           <br>
-          <strong>Minseok Kim</strong>
+		<em><strong>Minseok Kim</strong></em>
           <br>
     	  <em>3D Vision Course Project</em>, 2021<br>
           <p></p>
