--- a/index.html
+++ b/index.html
@@ -236,18 +236,16 @@
         <td width="75%" valign="top">
         <p>
           <a href="https://github.com/PaolaArdon/Salt-Pepper">
-          <papertitle>A Hybrid SLAM and Object Recognition System for Pepper Robot</papertitle>
+          <papertitle>Image Inpainting using Edge and Panoptic Features</papertitle>
           </a>
           <br>
-          <strong>Songyou Peng*</strong>, <a href="https://kz.linkedin.com/in/kushibar">Kaisar Kushibar*</a>, <a href="https://www.edinburgh-robotics.org/students/paola-ardon-ramirez">Paola Ardon*</a>
+		<em><strong>Minseok Kim</strong>, Jeongin Park, Solang Kim </em>
           <br>
-    	  <em>VIBOT Robotics Project</em>, 2016<br>
-    	  <a href="https://arxiv.org/abs/1903.00675">arxiv</a> |
-          <a href="https://www.youtube.com/watch?v=evFsnWH_bpY">video</a> |
-          <a href="https://github.com/pengsongyou/msc-thesis">code</a>
+    	  <em>Deep Generative Model Course Project, 2021</em><br>
           <p></p>
           <p></p>
-          Apply visual SLAM on the Pepper robot along with object recognition.</a>
+          Propose the image inpainting method using edge and panoptic information.
+	  Extract the edge and panoptic features given RGB images.</a>
         </p>
         </p>
         </td>
