--- a/index.html
+++ b/index.html
@@ -203,9 +203,11 @@
     	  <em>3D Vision Course Project</em>, 2021<br>
           <p></p>
           <p></p>
-           Propose 3D scene graph relationship using cosine similarity between two objects.
+           Propose a 3D scene graph generation method using RGB-D panoramic image.
 	   <br>
-           Apply Mask-RCNN on the panoramic image for identifying objects.
+           Apply Mask-RCNN on the panoramic image for identifying objects. 
+	   <br>
+	   Define a 3D relationship between two objects using cosine similarity.
         </p>
         </p>
         </td>
@@ -235,9 +237,7 @@
         <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
         <td width="75%" valign="top">
         <p>
-          <a href="https://github.com/PaolaArdon/Salt-Pepper">
           <papertitle>Image Inpainting using Edge and Panoptic Features</papertitle>
-          </a>
           <br>
 		<em><strong>Minseok Kim</strong>, Jeongin Park, Solang Kim </em>
           <br>
