--- a/index.html
+++ b/index.html
@@ -246,11 +246,53 @@
           <p></p>
           Propose the image inpainting method using edge and panoptic information.
 	  <br>
-	  Extract the edge and panoptic features given RGB images.</a>
+	  Extract the edge and panoptic features given RGB images.
         </p>
         </p>
         </td>
       </tr>
+
+
+<tr onmouseout="pepper_stop()" onmouseover="pepper_start()">
+      <td width="25%">
+        <div class="one">
+        <div class="two" id = 'pepper_gif'><img src='media/pepper_robot.gif' width="160" height="120"></div>
+        <img src='media/pepper_pic.jpg' width="160" height="120">
+        </div>
+        <script type="text/javascript">
+        function pepper_start() {
+        document.getElementById('pepper_gif').style.opacity = "1";
+        }
+        function pepper_stop() {
+        document.getElementById('pepper_gif').style.opacity = "0";
+        }
+        pepper_stop()
+        </script>
+        </script>
+      </td>
+        <!--<td width="25%"><img src="media/gwas.png" alt="GWAS image from https://upload.wikimedia.org/wikipedia/commons/5/59/GWAS_loci_influencing_human_facial_and_scalp_hair_phenotypes_-_cropped.png" width="160" height="160"></td>-->
+      <!--<tr>
+        <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
+        <td width="75%" valign="top">
+        <p>
+          <papertitle>Motion Planning for Starcraft Units using Reinforcement Learning</papertitle>
+          <br>
+		<em><strong>Minseok Kim</strong>, Jeongwoo Lee, Minseop Kim, Hankyeol Kyung, Hanam Hwang, Jeongyeon Lee, Minjeong Jung</em>
+          <br>
+    	  <em> AIC & SAMSUNG COMPANY Project, 2020/2021</em><br>
+          <p></p>
+          <p></p>
+          Propose the motion planning algorithm using reinforcement learning.
+	  <br>
+	  Implement the single-agent, multi-agent algorithms in an obstacle dense game environment.
+        </p>
+        </p>
+        </td>
+      </tr>
+
+
+
+
       </table>
       
       <!-- Teaching -->
