--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
         <p>
           <papertitle>Motion Planning for Starcraft Units using Reinforcement Learning</papertitle>
           <br>
-		<em><strong>Minseok Kim</strong>, Jeongwoo Lee, Minseop Kim, Hankyeol Kyung, Hanam Hwang, Jeongyeon Lee, Minjeong Jung</em>
+		<em><strong>Minseok Kim</strong>, Jeongwoo Lee, Minseop Kim, Hankyeol Kyung, Hanam Hwang, 
+			<br>Jeongyeon Lee, Minjeong Jung</em>
           <br>
     	  <em> AIC & SAMSUNG COMPANY Project, 2020/2021</em><br>
           <p></p>
