--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <br>
 		<em><strong>Minseok Kim</strong>, Junseon Kim, Seulgi Choi, Minseok Ryu</em>
           <br>
-    	  <em> AIC & SAMSUNG COMPANY Project, 2020/2021</em><br>
+    	  <em> IITP-Purdue University Summer Project, 2019</em><br>
           <p></p>
           <p></p>
           Propose the motion planning algorithm using online soccer game.
