--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
         <td width="75%" valign="top">
         <p>
-          <papertitle>Motion Planning for Soccer Game Units using Reinforcement Learning</papertitle>
+          <papertitle>Motion Planning for Online Soccer Game Units using Reinforcement Learning</papertitle>
           <br>
 		<em><strong>Minseok Kim</strong>, Junseon Kim, Seulgi Choi, Minseok Ryu</em>
           <br>
