--- a/index.html
+++ b/index.html
@@ -338,16 +338,10 @@
           <heading>Teaching</heading>
           <tr>
             <td style="padding:0px;width:25%;vertical-align:middle">
-              <img src="media/eth_logo.png" width="180">
+              <img src="images/chung-ang_university_logo.png" width="180">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-              Teaching Assistant (Lead), <a href="https://www.cvg.ethz.ch/teaching/3dvision/"><strong>3D Vision</strong></a>, Spring 2022
-              <br>
-              Teaching Assistant, <a href="https://www.cvg.ethz.ch/teaching/dlseminar/"><strong>Deep Learning for Computer Vision: Seminal Work</strong></a>, Spring 2022
-              <br>
-              Teaching Assistant, <a href="https://www.cvg.ethz.ch/teaching/3dvision/2020/index.php"><strong>3D Vision</strong></a>, Spring 2020
-              <br>
-              Teaching Assistant, <a href="https://www.cvg.ethz.ch/teaching/dlseminar/2020/"><strong>Deep Learning for Computer Vision: Seminal Work</strong></a>, Spring 2020
+              Software Engineering Tutor, <strong>Chung-Ang University</strong></a>, 2019/2020
               <br>
             </td>
           </tr>
