--- a/index.html
+++ b/index.html
@@ -337,11 +337,17 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <heading>Teaching</heading>
           <tr>
-            <td style="padding:0px;width:25%;vertical-align:middle">
-              <img src="images/chung-ang_university_logo.png" width="70">
+	  <td width="25%">
+            <!--
+		  <td style="padding:0px;width:25%;vertical-align:middle">
+            -->
+              <img src="images/chung-ang_university_logo.png" width="80">
             </td>
+            <td width="75%">
+         <!--
               <td style="padding:20px;width:75%;vertical-align:middle">
-              Software Engineering Tutor, <strong>Chung-Ang University</strong></a>, 2019/2020
+             -->
+ 		Software Engineering Tutor, <strong>Chung-Ang University</strong></a>, 2019/2020
               <br>
             </td>
           </tr>
