--- a/index.html
+++ b/index.html
@@ -347,11 +347,14 @@
          <!--
               <td style="padding:20px;width:75%;vertical-align:middle">
              -->
- 		Software Engineering Tutor, <strong>Chung-Ang University</strong></a>, 2019/2020
+		    Software Engineering Tutor, <strong>Chung-Ang University</strong></a>, <em>2019/2020</em>
               <br>
             </td>
           </tr>
         </table>
+      <br>
+      <br>
+      <br>
       <br>
       <br>
       <br>
