--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
         <td width="75%" valign="top">
         <p>
-          <papertitle>Motion Planning for Starcraft Units using Reinforcement Learning</papertitle>
+          <papertitle>Motion Planning for Starcraft Game Units using Reinforcement Learning</papertitle>
           <br>
 		<em><strong>Minseok Kim</strong>, Jeongwoo Lee, Minseop Kim, Hankyeol Kyung, Hanam Hwang, 
 			<br>Jeongyeon Lee, Minjeong Jung</em>
