--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
 
 
 	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" >
+	<heading>Teaching</heading>
         <tr onmouseout="mono_stop()" onmouseover="mono_start()">  
           <td width="25%">      
               <div class="one">
