--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <p>
           <papertitle>Motion Planning for Online Soccer Game Units using Reinforcement Learning</papertitle>
           <br>
-		<em><strong>Minseok Kim</strong>, Junseon Kim, Seulgi Choi, Minseok Ryu</em>
+		<em><strong>Minseok Kim</strong>, Junseon Kim, Seulgi Choi, Inseok Ryu</em>
           <br>
     	  <em> IITP-Purdue University Summer Project, 2019</em><br>
           <p></p>
