--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 <tr onmouseout="pepper_stop()" onmouseover="pepper_start()">
       <td width="25%">
         <div class="one">
-        <div class="two" id = 'pepper_gif'><img src='media/pepper_robot.gif' width="160" height="120"></div>
-        <img src='media/pepper_pic.jpg' width="160" height="120">
+        <div class="two" id = 'pepper_gif'><img src='images/purde-rl.png' width="160" height="120"></div>
+        <img src='images/purdue-rl.png' width="160" height="120">
         </div>
         <script type="text/javascript">
         function pepper_start() {
