--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <tr onmouseout="pepper_stop()" onmouseover="pepper_start()">
       <td width="25%">
         <div class="one">
-        <div class="two" id = 'pepper_gif'><img src='images/purde-rl.png' width="160" height="160"></div>
+        <div class="two" id = 'pepper_gif'><img src='images/purdue-rl.png' width="160" height="160"></div>
         <img src='images/purdue-rl.png' width="160" height="160">
         </div>
         <script type="text/javascript">
