--- a/index.html
+++ b/index.html
@@ -253,10 +253,12 @@
       </tr>
 
 
-<tr onmouseout="pepper_stop()" onmouseover="pepper_start()">
+
+<tr onmouseout="dist_stop()" onmouseover="dist_start()"> 
       <td width="25%">
         <div class="one">
-        <div class="two" id = 'pepper_gif'><img src='images/samsung-proj1.png' width="160" height="160"></div>
+        <div class="two" id = 'dist_shape'>
+	<img src='images/samsung-proj1.png' width="160" height="160"></div>
         <img src='images/samsung-proj2.gif' width="160" height="160">
         </div>
         <script type="text/javascript">
