--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
             </video></div>
         <img src='images/samsung-proj1.png' width="160" height="160"></div>
         <script type="text/javascript">
-        function sap_start() { 
+        function sam_start() { 
         document.getElementById('sam_shape').style.opacity = "1";
         }
-        function sap_stop() { 
+        function sam_stop() { 
         document.getElementById('sam_shape').style.opacity = "0"; 
         }
-  sap_stop()
+  sam_stop()
         </script>
         </script>
       </td>
