--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
           <td width="25%">      
               <div class="one">
                 <div class="two" id='malle_image'>
-                  <img src='images/chung-ang_university_logo.png' width="110"></div>
-                <img src='images/chung-ang_university_logo.png' width="110">
+			<center><img src='images/chung-ang_university_logo.png' width="110"></center></div>
+		      <center><img src='images/chung-ang_university_logo.png' width="110"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
