--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-                  <img src='images/submitted-logo.jpg' width="130"></div>
-                <img src='images/submitted-logo.jpg' width="130">
+			<center><img src='images/submitted-logo.jpg' width="130"></center></div>
+		      <center><img src='images/submitted-logo.jpg' width="130"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
