--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <heading>Research</heading>
               <p>
                My research interests lie in the fields of 3D computer vision. In particular, I focus on realistic movements using humans and animals. 
-	       Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation using animals.
+	       Furthermore, I'm interested in the 3D representation and non-rigid motion estimation/generation.
               </p>
             </td>
           </tr>
