--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		 Currently, I am a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p> 
-                 During the Bachelor, I was fortunate to be selected as 
+		 Before that, I received my Bachelor's degree from <a href="https://neweng.cau.ac.kr/index.do">Chung-Ang University</a>.
+                 During the Bachelor, I was selected for the K-SW Square Global Education Program.
+		 So I conducted a team project under the theme of reinforcement learning at Purdue University.
               </p>
               <p style="text-align:center">
                 <a href="mailto:hello.min1996@gmail.com">Email</a> &nbsp/&nbsp
