--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p> 
 		 Before that, I received my Bachelor's degree from <a href="https://neweng.cau.ac.kr/index.do">Chung-Ang University</a>.
                  During the Bachelor, I was selected for the K-SW Square Global Education Program.
-		 So I conducted a team project under the theme of reinforcement learning at Purdue University.
+		 So I conducted a team project under the theme of reinforcement learning at <a href="https://www.purdue.edu/">Purdue University</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:hello.min1996@gmail.com">Email</a> &nbsp/&nbsp
