--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <br>
 		<em><strong>Minseok Kim</strong></em>
           <br>
-    	  <em>3D Vision Course Project</em>, 2021<br>
+		<em>3D Vision Course Project, 2021</em><br>
           <p></p>
           <p></p>
            Propose a 3D scene graph generation method using RGB-D panoramic image.
