--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
 	    <td valign="top" width="75%">
 		    <br>
 		    <br>
-                <papertitle> A paper on "3D Human mesh generation in scene" </papertitle>
+                <papertitle> Pose-guided 3D Human Generation in Indoor Scene </papertitle>
 	       <br>
-              <em>submitted</em>, 2022
+		  <em><strong>Minseok Kim</strong>, Changwoo Kang, Jeongin Park, Kyungdon Joo</em>
+		    <br> <em> Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
               <br>
             </td>
           </tr>
