--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-			<center><img src='images/submitted-logo.jpg' width="130"></center></div>
-		      <center><img src='images/submitted-logo.jpg' width="130"></center>
+			<center><img src='images/aaai-2023/novel-loss.png' width="130"></center></div>
+		      <center><img src='images/aaai-2023/novel-loss.png' width="130"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
