--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
 		    <br>
                 <papertitle> Pose-guided 3D Human Generation in Indoor Scene </papertitle>
               <br>
+		    <em><strong>Minseok Kim</strong>, Changwoo Kang, Jeongin Park, Kyungdon Joo</em>
+		    <br>
+		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
+	 	<br>
             </td>
           </tr>
         </tbody></table>		    
