--- a/index.html
+++ b/index.html
@@ -109,14 +109,15 @@
             </td>
 		
 	    <td valign="top" width="75%">
-		    <br>
-		    <br>
                 <papertitle> Pose-guided 3D Human Generation in Indoor Scene </papertitle>
               <br>
 		    <em><strong>Minseok Kim</strong>, Changwoo Kang, Jeongin Park, Kyungdon Joo</em>
 		    <br>
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
+		    paper (coming soon)
+		    <br>
+		    
             </td>
           </tr>
         </tbody></table>		    
