--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-			<center><img src='images/aaai-2023/novel-loss.png' width="160" height="150"></center></div>
-		      <center><img src='images/aaai-2023/novel-loss.png' width="160" height="150"></center>
+			<center><img src='images/aaai-2023/novel-loss.png' width="160" height="130"></center></div>
+		      <center><img src='images/aaai-2023/novel-loss.png' width="160" height="130"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
@@ -117,7 +117,12 @@
 	 	<br>
 		    paper (coming soon)
 		    <br>
-		    
+		    Address the problem of scene-aware 3D human avatar generation based on human-scene interactions. 
+		    <br>
+		    Pay attention to the fact that physical contact between 3D human and scene.
+		    <br>
+		    Propose normal alignment between humans and scenes.
+		    <br>
             </td>
           </tr>
         </tbody></table>		    
