--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-			<center><img src='images/aaai-2023/novel-loss.png' width="160" height="130"></center></div>
-		      <center><img src='images/aaai-2023/novel-loss.png' width="160" height="130"></center>
+			<center><img src='images/aaai-2023/novel-loss.png' width="160" height="150"></center></div>
+		      <center><img src='images/aaai-2023/novel-loss.png' width="160" height="150"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
@@ -115,13 +115,14 @@
 		    <br>
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
-		    paper (coming soon)
+		    <em>paper (coming soon)</em>
+		    <br>
 		    <br>
 		    Address the problem of scene-aware 3D human avatar generation based on human-scene interactions. 
 		    <br>
 		    Pay attention to the fact that physical contact between 3D human and scene.
 		    <br>
-		    Propose normal alignment between humans and scenes.
+		    Propose normal alignment between human and scene.
 		    <br>
             </td>
           </tr>
