--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-			<center><img src='images/aaai-2023/teaser.png' width="160" height="150"></center></div>
-		      <center><img src='images/aaai-2023/teaser.png' width="160" height="150"></center>
+			<center><img src='images/aaai-2023/teaser.png' width="160" height="140"></center></div>
+		      <center><img src='images/aaai-2023/teaser.png' width="160" height="140"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
@@ -118,7 +118,7 @@
 		    <em>paper (coming soon)</em>
 		    <br>
 		    <br>
-		    Address the problem of scene-aware 3D human generation based on human-scene interactions. 
+		    Address the problem of scene-aware 3D human generation based on interactions. 
 		    <br>
 		    Pay attention to the fact that physical contact between 3D human and scene.
 		    <br>
