--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 		    		      <!-- original padding ="20" soon modified -->
               <div class="one">
                 <div class="two" id='malle_image'>
-			<center><img src='images/aaai-2023/teaser.png' width="160" height="140"></center></div>
-		      <center><img src='images/aaai-2023/teaser.png' width="160" height="140"></center>
+			<center><img src='images/aaai-2023/teaser2.png' width="180" height="120"></center></div>
+		      <center><img src='images/aaai-2023/teaser2.png' width="180" height="120"></center>
 		      <!-- original image size widith ="160" soon modified -->
               </div>
               <script type="text/javascript">
