--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
               
 		<div class="one">
                 <div class="two" id='ff_image'>
-			<center><img src='images/aaai-2023/teaser3.png' width="150" height="150"></center></div>
-		      <center><img src='images/aaai-2023/loss.png' width="150" height="150"></center>
+			<center><img src='images/aaai-2023/loss.png' width="150" height="150"></center></div>
+		      <center><img src='images/aaai-2023/teaser3.png' width="150" height="150"></center>
               </div>
               <script type="text/javascript">
                 function ff_start() {
