--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
-              <p>Hallo, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
+              <p>Hello, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
 		 Currently, I am a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p> 
