--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <img src='images/aaai-2023/teaser3.png' width="150" height="150"></div>
         </div>
         <script type="text/javascript">
-        function unisurf_start() { 
+        function pond_start() { 
         document.getElementById('pond_shape').style.opacity = "1";
         }
-        function unisurf_stop() { 
+        function pond_stop() { 
         document.getElementById('pond_shape').style.opacity = "0"; 
         }
         pond_stop()
