--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
-              <p>Hello, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
+              <p>Hallo, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
 		 Currently, I am a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p> 
@@ -82,8 +82,8 @@
 	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" >
     <tr onmouseout="pond_stop()" onmouseover="pond_start()">  
       <td width="25%">
-        <div class="one">
-        <div class="two" id = 'pond_shape'>
+<!--         <div class="one"> -->
+<!--         <div class="two" id = 'pond_shape'>
         <img src='images/aaai-2023/loss.png' width="150" height="150"></div>
         <img src='images/aaai-2023/teaser3.png' width="150" height="150"></div>
         </div>
@@ -97,7 +97,7 @@
         pond_stop()
         </script>
         </script>
-      </td>
+      </td> -->
               
 <!-- 		<div class="one">
                 <div class="two" id='ff_image'>
@@ -115,7 +115,7 @@
                 ff_stop()
               </script> -->
 		  
-<!-- 		  <div class="one">
+		  <div class="one">
                 <div class="two" id='malle_image'>
 			<center><img src='images/aaai-2023/teaser3.png' width="150" height="150"></center></div>
 		      <center><img src='images/aaai-2023/teaser3.png' width="150" height="150"></center>
@@ -131,8 +131,8 @@
                 }
                 malle_stop()
               </script>
-		--> 
-<!--             </td> -->
+		 
+            </td>
 		
 	    <td valign="top" width="75%">
                 <papertitle> Pose-guided 3D Human Generation in Indoor Scene </papertitle>
