--- a/pond/index.html
+++ b/pond/index.html
@@ -198,8 +198,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
                     Acknowledgements
                 </h3>
                 <p class="text-justify">
-                This work was supported by Institute of Information \& communications Technology Planning \& Evaluation(IITP) grant funded by the Korea government(MSIT)
-(No.2020-0-01336, Artificial Intelligence Graduate School Program(UNIST)).
+                This work was supported by Institute of Information & communications Technology Planning & Evaluation(IITP) grant funded by the Korea government(MSIT)(No.2020-0-01336, Artificial Intelligence Graduate School Program(UNIST)).
                     <br>
                 The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a>.
                 </p>
