--- a/pond/index.html
+++ b/pond/index.html
@@ -65,28 +65,22 @@
                         </br>UNIST
                     </li>
                     <li>
-                        <a href="http://bmild.github.io/">
-                            Ben Mildenhall
+                        <a href="https://github.com/Kang-ChangWoo">
+                            Changwoo Kang
                         </a>
-                        </br>Google
+                        </br>UNIST
                     </li>
                     <li>
-                        <a href="https://scholar.harvard.edu/dorverbin/home">
-                          Dor Verbin
+                        <a href="https://github.com/Jeongin-park">
+                          Jeongin Park
                         </a>
-                        </br>Harvard University
+                        </br>UNIST
                     </li><br>
                     <li>
-                        <a href="https://pratulsrinivasan.github.io/">
-                          Pratul P. Srinivasan
+                        <a href="http://rvi.unist.info//">
+                          Kyungdon Joo
                         </a>
-                        </br>Google
-                    </li>
-                    <li>
-                        <a href="https://phogzone.com/">
-                          Peter Hedman
-                        </a>
-                        </br>Google
+                        </br>UNIST
                     </li>
                 </ul>
             </div>
