--- a/pond/index.html
+++ b/pond/index.html
@@ -168,7 +168,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
         </div>
 
             
-<!--         <div class="row">
+        <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Citation
@@ -184,7 +184,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
 }</textarea>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
